--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -34,6 +34,11 @@ h1{
   word-spacing: 4px;
 }
 
+.logo{
+  height: 100px;
+  width: auto;
+  float: left;
+}
 /* -----BUTTONS-----*/
 .btn:link,
 .btn:visited {
