--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -91,3 +91,33 @@ header{
   left: 50%;
   transform: translate(-50%, -50%);
 }
+.logo{
+  height: 100px;
+  width: auto;
+  float: left;
+  margin-top: 20px;
+}
+.main-nav{
+  float:right;
+  list-style: none;
+  margin-top: 40px;
+}
+
+.main-nav li{
+  display: inline-block;
+  margin-left: 40px;
+}
+.main-nav li a:link,
+.main-nav li a:visited{
+  text-decoration: none;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 90%;
+  border-bottom: 2px solid transparent;
+  padding: 6px 0px;
+  transition: border-bottom 0.3s;
+}
+.main-nav li a:active,
+.main-nav li a:hover{
+  border-bottom: 2px solid #e67e22;
+}
