--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,6 +13,14 @@ html{
   font-weight: 300;
   text-rendering: optimizeLegibility;
 }
+.clearfix{ zoom: 1}
+.clearfix:after{
+  content: ".";
+  clear: both;
+  display: block;
+  height: 0;
+  visibility: hidden;
+}
 
 /*------------------------------------------------*/
 /*Reusable*/
@@ -27,13 +35,38 @@ section{
 .box{
   padding: 1%;
 }
+a:link,
+a:visited{
+color: #e67e22;
+text-decoration: none;
+padding-bottom: 1px;
+border-bottom: 1px solid #e67e22;
+transition: border-bottom 0.2s, color 0.2s;
+}
+a:hover,
+a:active{
+color: #555;
+border: 1px solid transparent;
+}
 
 /* -----ICONS-----*/
 .icon-big{
-font-size: 300%;
-display: block;
-color: #e67e22;
-margin-bottom: 10px;
+  font-size: 300%;
+  display: block;
+  color: #e67e22;
+  margin-bottom: 10px;
+}
+.icon-small{
+  display: inline-block;
+  width: 30px;
+  text-align: center;
+  color: #e67e22;
+  font-size: 120%;
+  margin-right: 10px;
+  /* Align text and icons */
+  line-height: 120%;
+  vertical-align: middle;
+  margin-top: -3px;
 }
 /* -----HEADINGS-----*/
 h1,
@@ -211,14 +244,17 @@ header{
 /*How it works*/
 /*------------------------------------------------*/
 
+.section-steps{
+  background-color: #f4f4f4;
+}
 .steps-box:first-child{
   text-align: right;
   padding-right: 3%;
   margin-top: 30px;
 }
 .steps-box:last-child{
-padding-left: 3%;
-margin-top: 70px;
+  padding-left: 3%;
+  margin-top: 70px;
 }
 .app-screen{
   width: 40%;
@@ -226,6 +262,9 @@ margin-top: 70px;
 }
 .works-step{
   margin-bottom: 50px;
+}
+.works-step:last-of-type{
+  margin-bottom: 80px;
 }
 .works-step div{
   color: #e67e22;
@@ -240,8 +279,30 @@ margin-top: 70px;
   font-size: 150%;
   margin-right: 5%;
 }
+.btn-app:link,
+.btn-app:visited{
+  border: 0;
+}
 .btn-app img{
   height: 50px;
   width: auto;
   margin-right: 10px;
+}
+/*------------------------------------------------*/
+/*Cities*/
+/*------------------------------------------------*/
+.box img{
+  width: 100%;
+  height: auto;
+  margin-bottom: 15px;
+}
+.city-features{
+  margin-bottom: 5px;
+}
+/*------------------------------------------------*/
+/*Testamonials*/
+/*------------------------------------------------*/
+.section-testimonials{
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url(img/back-customers.jpg);
+background-size: cover;
 }
