--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -304,8 +304,77 @@ header{
 /*Testamonials*/
 /*------------------------------------------------*/
 .section-testimonials{
-background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url(img/back-customers.jpg);
-background-size: cover;
-color:white;
-background-attachment: fixed;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url(img/back-customers.jpg);
+  background-size: cover;
+  color:white;
+  background-attachment: fixed;
+}
+blockquote{
+  padding: 2%;
+  font-style: italic;
+  line-height: 145%;
+  position:relative;
+  margin-top: 40px;
+}
+blockquote:before{
+  content: "\201c";
+  font-size: 400%;
+  display: block;
+  position: absolute;
+  top: -10px;
+  left: -5px;
+}
+cite{
+  font-size: 90%;
+  margin-top: 25px;
+  display: block;
+}
+cite img{
+  height: 45px;
+  border-radius: 50%;
+  margin-right: 10px;
+  vertical-align: middle;
+}
+/*------------------------------------------------*/
+/*Plans*/
+/*------------------------------------------------*/.section-plans{
+  background-color: #f4f4f4;
+}
+.plan-box{
+  background-color: #fff;
+  border-radius: 5px;
+  width: 90%;
+  margin-left: 5%;
+  box-shadow: 0 2px 2px #e7e7e7;
+}
+.plan-box div{
+  padding: 15px;
+  border-bottom:1px solid rgb(223, 223, 223);
+}
+.plan-box div:first-child{
+  border-radius: 5px 5px 0px 0;
+  background-color: rgb(252, 252, 252);
+}
+.plan-box div:last-child{
+  text-align:center;
+  border-bottom: 1px solid transparent;
+}
+.plan-price{
+  font-size: 200%;
+  margin-bottom: 10px;
+  font-weight: 100;
+  color: #e67e22;
+}
+.plan-price span{
+  font-size:30%;
+  font-weight: 300;
+}
+.plan-price-meal{
+font-size: 80%;
+}
+.plan-box ul{
+  list-style: none;
+}
+.plan-box ul li{
+  padding: 5px 0;
 }
