--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -112,7 +112,8 @@ h2:after{
 }
 /* -----BUTTONS-----*/
 .btn:link,
-.btn:visited {
+.btn:visited,
+input[type=submit] {
   display: inline-block;
   padding: 10px 30px;
   font-weight: 300;
@@ -121,7 +122,8 @@ h2:after{
   transition: background-color 0.2s, border 0.2s, color 0.2s;
 }
 .btn-full:link,
-.btn-full:visited{
+.btn-full:visited,
+input[type=submit]{
   background-color: #e67e22;
   border: 1px solid #e67e22;
   color: #fff;
@@ -133,11 +135,15 @@ h2:after{
   color: #e67e22;
 }
 .btn:hover,
-.btn:active{
-  background-color: #cf6d17;
+.btn:active,
+input[type=submit]:hover,
+input[type=submit]:active{
+background-color: #cf6d17;
+cursor: pointer;
 }
 .btn-full:hover,
-.btn-full:active{
+.btn-full:active,
+input[type=submit]{
   border: 1px solid #cf6d17;
 }
 .btn-ghost:hover,
@@ -370,7 +376,7 @@ cite img{
   font-weight: 300;
 }
 .plan-price-meal{
-font-size: 80%;
+  font-size: 80%;
 }
 .plan-box ul{
   list-style: none;
@@ -378,3 +384,108 @@ font-size: 80%;
 .plan-box ul li{
   padding: 5px 0;
 }
+
+/*------------------------------------------------*/
+/*Plans*/
+/*------------------------------------------------*/
+.contact-form{
+  width: 60%;
+  margin: 0 auto;
+
+}
+input[type=text],
+input[type=email],
+select,
+textarea{
+  width: 100%;
+  padding: 7px;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+}
+
+textarea{
+  height: 100px;
+}
+input[type=checkbox]{
+  margin: 10px 5px 10px 0px;
+}
+
+*:focus{
+  outline: none;
+}
+
+/*------------------------------------------------*/
+/*Footer*/
+/*------------------------------------------------*/
+
+footer{
+  background-color: #333;
+  padding: 40px;
+  font-size: 80%;
+}
+.footer-nav{
+  list-style: none;
+  float:left
+}
+.social-links{
+  list-style: none;
+  float: right;
+}
+
+.footer-nav ul li a:link{
+  margin-right: 10px;
+}
+
+.footer-nav li,
+.social-links li{
+  display: inline-block;
+}
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-links li a:link,
+.social-links li a:visited{
+  text-decoration: none;
+  margin-right: 20px;
+  border: 0;
+  color: #888;
+  transition: color 0.2s;
+}
+.social-links li:last-child{
+  margin-right: 0;
+}
+.footer-nav li a:hover,
+.footer-nav li a:active,
+.social-links li a:hover,
+.social-links li a:active{
+  color: #eee;
+}
+.social-links li a:link,
+.social-links li a:visited{
+font-size: 130%;
+}
+.ion-social-facebook,
+.ion-social-twitter,
+.ion-social-instagram,
+.ion-social-googleplus{
+  transition: color 0.2s;
+}
+
+.ion-social-facebook:hover{
+  color: #3b5996
+}
+.ion-social-twitter:hover{
+  color: #00aced
+}
+.ion-social-googleplus:hover{
+  color: #dd4b39
+}
+.ion-social-instagram:hover{
+  color: #517fa4
+}
+
+footer p{
+  color: #888;
+  text-align: center;
+  margin-top: 20px;
+}
+
