--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -1,6 +1,9 @@
+/*Big tablet to 1200px*/
+@media only screen and (max-width: 1200px){
 
+}
 /*Tablets*/
-@media only screen and (max-width: 1024px){
+@media only screen and (max-width: 1023px){
 
 }
 /*normal phones*/
