--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -6,7 +6,8 @@
     padding: 0 2%;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
   }
   .row{
     padding: 0 2%;
@@ -77,9 +78,59 @@ section{
 }
 /*normal phones*/
 @media only screen and (max-width: 767px){
-
+body{
+  font-size: 16px;
+}
+section{
+  padding: 30px 0;
+}
+.row,
+.hero-text-box{
+padding: 0 4%;
+}
+.col{
+  width: 100%;
+  margin: 0% 0% 4% 0%
+}
+.main-nav{
+  display: none;
+}
+.row p.long{
+  width: 100%;
+  margin-left: 0%;
+}
+.works-step div{
+  height: 40px;
+  width: 40px;
+  padding: 4px;
+  margin-right: 15px;
+  font-size: 120%;
+}
+h1{
+  font-size: 180%;
+}
+h2{
+  font-size: 150%;
+}
+.works-step{
+  margin-bottom: 20px;
+}
+.works-step:last-of-type{
+  margin-bottom: 20px;
+}
+.steps-box:first-child{
+  text-align: center;
+}
+.app-screen{
+  width: 40%;
+}
 }
 /* Small phones */
 @media only screen and (max-width: 480px){
-
+.contact-form{
+  width: 100%;
+}
+section{
+  padding: 25px 0;
+}
 }
