--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,7 +4,8 @@
 *{
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 html,
 body{
@@ -43,6 +44,7 @@ color: #e67e22;
 text-decoration: none;
 padding-bottom: 1px;
 border-bottom: 1px solid #e67e22;
+-webkit-transition: border-bottom 0.2s, color 0.2s;
 transition: border-bottom 0.2s, color 0.2s;
 }
 a:hover,
@@ -121,6 +123,7 @@ input[type=submit] {
   font-weight: 300;
   text-decoration: none;
   border-radius: 200px;
+  -webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;
   transition: background-color 0.2s, border 0.2s, color 0.2s;
 }
 .btn-full:link,
@@ -173,6 +176,7 @@ input[type=submit]{
 /*Header*/
 /*------------------------------------------------*/
 header{
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(151, 151, 151, 0.308)), to(rgba(204, 204, 204, 0.445))),url(img/hero.jpg);
   background-image: linear-gradient(rgba(151, 151, 151, 0.308), rgba(204, 204, 204, 0.445)),url(img/hero.jpg);
   background-size: cover;
   background-position: center;
@@ -184,7 +188,8 @@ header{
   width: 1140px;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 .logo{
   height: 100px;
@@ -210,6 +215,7 @@ header{
   font-size: 90%;
   border-bottom: 2px solid transparent;
   padding: 6px 0px;
+  -webkit-transition: border-bottom 0.3s;
   transition: border-bottom 0.3s;
 }
 .main-nav li a:active,
@@ -242,11 +248,16 @@ header{
   opacity: 0.7;
   width: 100%;
   height: auto;
-  transform: scale(1.4);
+  -webkit-transform: scale(1.4);
+          transform: scale(1.4);
+  -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
+  transition: opacity 0.3s, -webkit-transform 0.3s;
   transition: transform 0.3s, opacity 0.3s;
+  transition: transform 0.3s, opacity 0.3s, -webkit-transform 0.3s;
 }
 .meal-photo img:hover{
-  transform: scale(1.03);
+  -webkit-transform: scale(1.03);
+          transform: scale(1.03);
   opacity: 1;
 }
 /*------------------------------------------------*/
@@ -312,6 +323,7 @@ header{
 /*Testamonials*/
 /*------------------------------------------------*/
 .section-testimonials{
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))),url(img/back-customers.jpg);
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),url(img/back-customers.jpg);
   background-size: cover;
   color:white;
@@ -353,7 +365,8 @@ cite img{
   border-radius: 5px;
   width: 90%;
   margin-left: 5%;
-  box-shadow: 0 2px 2px #e7e7e7;
+  -webkit-box-shadow: 0 2px 2px #e7e7e7;
+          box-shadow: 0 2px 2px #e7e7e7;
 }
 .plan-box div{
   padding: 15px;
@@ -450,6 +463,7 @@ footer{
   margin-right: 20px;
   border: 0;
   color: #888;
+  -webkit-transition: color 0.2s;
   transition: color 0.2s;
 }
 .social-links li:last-child{
@@ -469,6 +483,7 @@ font-size: 130%;
 .ion-social-twitter,
 .ion-social-instagram,
 .ion-social-googleplus{
+  -webkit-transition: color 0.2s;
   transition: color 0.2s;
 }
 
