--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -93,8 +93,40 @@ padding: 0 4%;
   margin: 0% 0% 4% 0%
 }
 .main-nav{
-  display: none;
+  float:left;
+  margin-top: 35px;
+  margin-left: 10px;
 }
+.main-nav li{
+  display: block;
+}
+.main-nav li a:link,
+.main-nav li a:visited{
+border: 0;
+display: block;
+padding: 10px 0;
+font-size: 100%;
+}
+.mobile-nav-icon{
+  display: inline-block;
+}
+.sticky .main-nav{
+  margin-top: 10px;
+}
+
+.sticky .main-nav li a:link,
+.sticky .main-nav li a:visited{
+  padding: 10px 0;
+}
+.sticky .main-nav li a:active,
+.sticky .main-nav li a:hover{
+  border-bottom: 2px solid #e67e22;
+}
+.sticky .mobile-nav-icon i{
+  color: #555;
+  margin-top: 10px;
+}
+
 .row p.long{
   width: 100%;
   margin-left: 0%;
