--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -92,41 +92,55 @@ padding: 0 4%;
   width: 100%;
   margin: 0% 0% 4% 0%
 }
-.main-nav{
-  float:left;
-  margin-top: 35px;
-  margin-left: 10px;
-}
-.main-nav li{
-  display: block;
-}
-.main-nav li a:link,
-.main-nav li a:visited{
-border: 0;
-display: block;
-padding: 10px 0;
-font-size: 100%;
-}
-.mobile-nav-icon{
-  display: inline-block;
-}
-.sticky .main-nav{
-  margin-top: 10px;
-}
+.main-nav { display: none; }
+    .mobile-nav-icon {
+        display: inline-block;
+        position: relative;
+        z-index: 9999;
+    }
 
-.sticky .main-nav li a:link,
-.sticky .main-nav li a:visited{
-  padding: 10px 0;
-}
-.sticky .main-nav li a:active,
-.sticky .main-nav li a:hover{
-  border-bottom: 2px solid #e67e22;
-}
-.sticky .mobile-nav-icon i{
-  color: #555;
-  margin-top: 10px;
-}
+    .main-nav {
+        float: none;
+        position: absolute;
+        z-index: 8888;
+        width: 100%;
+        height: 100vh;
+        margin: 0;
+        margin-left: -2%;
+        background-color: rgba(230, 126, 34, 0.92);
+        text-align: center;
+        padding-top: 20vh;
+    }
 
+    .main-nav li {
+        display: block;
+        margin-left: 0;
+        font-size: 110%;
+    }
+
+    .main-nav li a:link,
+    .main-nav li a:visited {
+        display: block;
+        border: 0;
+        padding: 10px 0;
+        font-size: 100%;
+    }
+
+    
+    .sticky .main-nav { margin-top: 0; }
+    
+    
+    .sticky .main-nav li a:link,
+    .sticky .main-nav li a:visited {
+        padding: 10px 0;
+        color: #fff;
+    }
+    
+    
+    
+    .sticky .mobile-nav-icon { margin-top: 10px; }
+    .sticky .mobile-nav-icon i { color: #555; }
+    .sticky .mobile-nav-icon i.ion-close-round { color: #fff; }
 .row p.long{
   width: 100%;
   margin-left: 0%;
